@@ -60,8 +60,11 @@ public:
       
         unsigned initialSize = sizeof(T) * n;
 
-        // 16-byte alignment for 128bit SIMD.
+#if USE(WEBAUDIO_FFMPEG)
+        const size_t alignment = 32;
+#else
         const size_t alignment = 16;
+#endif
 
         if (m_allocation)
             fastFree(m_allocation);
